[PR-20] - Adding Secondary Nav Bar Details

--- a/packages.html
+++ b/packages.html
@@ -73,26 +73,24 @@
         </header>
 
         <div class="tour-gallery-container">
-            <ul class="tg-secondary-nav-bar">
-                <a href="#" target="_blank">
-                    <li>
-                        <img src="images/location/location-info-logo.png" alt="Information Logo"/>
-                        <p>Information</p>
-                    </li>
+            <div class="tg-secondary-nav-bar">
+                <a class="nav information" href="#">
+                    <img src="images/location/location-info-logo.png" alt="Information Logo"/>
+                    <p>Information</p>
                 </a>
-                <li>
+                <a class="nav tour-plan" href="#">
                     <img src="images/location/locations_calender-logo.png" alt="Tour Plan Logo"/>
                     <p>Tour Plan</p>
-                </li>
-                <li>
+                </a>
+                <a class="nav location" href="#">
                     <img src="images/location/icons_location.png" alt="Location Logo" />
                     <p>Location</p>
-                </li>
-                <li class="snb-gallery">
+                </a>
+                <a class="nav gallery" href="#">
                     <img src="images/location/location-gallery-logo.png" alt="Gallery Logo"/>
                     <p>Gallery</p>
-                </li>
-            </ul>
+                </a>
+            </div>
 
             <div class="tg-image-and-information">
                 <div class="ii-image-gallery">
@@ -128,49 +126,48 @@
                         </div> -->
 
                 </div>
+                <form class="ii-information">
+                    <h1 class="i-title">Book This Tour</h1>
+                    <p class="i-script">
+                    Ex optio sequi et quos praesentium in nostrum labore nam rerum
+                    iusto aut magni nesciunt? Quo quidem neque iste expedita est dolo.
+                    </p>
+                    <div>
+                        <img src="images/location/loca-input-user.png" alt="User Icon">
+                        <input type="text" placeholder="Name">
+                    </div>
+                    <div>
+                        <img src="images/location/loca-input-email.png" alt="Email Icon">
+                        <input type="email" placeholder="Email">
+                    </div>
+                    <div>
+                        <img src="images/location/loca-input-email2.png" alt="Email Icon">
+                        <input type="email" placeholder="Confirm Email">
+                    </div>
+                    <div>
+                        <img src="images/location/loca-input-phone.png" alt="Phone Icon">
+                        <input type="text" placeholder="Phone">
+                    </div>
+                    <div>
+                        <img src="images/location/location-input-date.png" alt="Date Icon">
+                        <input type="text" placeholder="Date">
+                    </div>
+                    <div>
+                        <img src="images/location/loca-input-tag.png" alt="Ticket Icon">
+                        <input type="number" placeholder="Number of ticket">
+                    </div>
+                    <div>
+                        <img src="images/location/loca-input-masage.png" alt="Message Icon">
+                        <input type="text" placeholder="Message">
+                    </div>
+                    <button class="button" type="submit" >Check Availability</button>
+                    <button class="button" type="submit" >Book Now</button>    
+                </form>
+            </div>
 
-            <form class="ii-information">
-                <h1 class="i-title">Book This Tour</h1>
-                <p class="i-script">
-                Ex optio sequi et quos praesentium in nostrum labore nam rerum
-                iusto aut magni nesciunt? Quo quidem neque iste expedita est dolo.
-                </p>
-                <div>
-                    <img src="images/location/loca-input-user.png" alt="User Icon">
-                    <input type="text" placeholder="Name">
-                </div>
-                <div>
-                    <img src="images/location/loca-input-email.png" alt="Email Icon">
-                    <input type="email" placeholder="Email">
-                </div>
-                <div>
-                    <img src="images/location/loca-input-email2.png" alt="Email Icon">
-                    <input type="email" placeholder="Confirm Email">
-                </div>
-                <div>
-                    <img src="images/location/loca-input-phone.png" alt="Phone Icon">
-                    <input type="text" placeholder="Phone">
-                </div>
-                <div>
-                    <img src="images/location/location-input-date.png" alt="Date Icon">
-                    <input type="text" placeholder="Date">
-                </div>
-                <div>
-                    <img src="images/location/loca-input-tag.png" alt="Ticket Icon">
-                    <input type="number" placeholder="Number of ticket">
-                </div>
-                <div>
-                    <img src="images/location/loca-input-masage.png" alt="Message Icon">
-                    <input type="text" placeholder="Message">
-                </div>
-                <button class="button" type="submit" >Check Availability</button>
-                <button class="button" type="submit" >Book Now</button>    
-            </form>
-        </div>
-
-        <img class="tg-plant" src="images/location/tour-location-img002.png" alt="Plant Image"/>
-        <img class="tg-vacation" src="images/location/tour-location-img001.png" alt="Vacation Image"/>
+            <img class="tg-plant" src="images/location/tour-location-img002.png" alt="Plant Image"/>
+            <img class="tg-vacation" src="images/location/tour-location-img001.png" alt="Vacation Image"/>
         </div>
     </div>
-    </body>
+</body>
 </html>
