[PR-20] - Adding Box Shadow To Container Div

--- a/packages.html
+++ b/packages.html
@@ -74,19 +74,19 @@
 
         <div class="tour-gallery-container">
             <div class="tg-secondary-nav-bar">
-                <a class="nav information" href="#">
+                <a class="nav information" href="#" target="_blank">
                     <img src="images/location/location-info-logo.png" alt="Information Logo"/>
                     <p>Information</p>
                 </a>
-                <a class="nav tour-plan" href="#">
+                <a class="nav tour-plan" href="#" target="_blank">
                     <img src="images/location/locations_calender-logo.png" alt="Tour Plan Logo"/>
                     <p>Tour Plan</p>
                 </a>
-                <a class="nav location" href="#">
+                <a class="nav location" href="#" target="_blank">
                     <img src="images/location/icons_location.png" alt="Location Logo" />
                     <p>Location</p>
                 </a>
-                <a class="nav gallery" href="#">
+                <a class="nav gallery" href="#" target="_blank">
                     <img src="images/location/location-gallery-logo.png" alt="Gallery Logo"/>
                     <p>Gallery</p>
                 </a>
