[PR-19] - Updated after lesson

--- a/packages.html
+++ b/packages.html
@@ -29,10 +29,10 @@
                 <div class="nav-link-dropdown">
                   <a id="services-link" href="#">Services</a>
                   <div id="drop-down-links" class="hero-nav-dropdown">
-                    <a href="#">Honeymoon Packages</a><br><br>
-                    <a href="#">Tours Packages</a><br><br>
-                    <a href="#">Musical Events</a><br><br>
-                    <a href="#">Build Package</a><br><br>
+                    <a href="#">Honeymoon Packages</a><br>
+                    <a href="#">Tours Packages</a><br>
+                    <a href="#">Musical Events</a><br>
+                    <a href="#">Build Package</a><br>
                   </div>
                 </div>
               </li>
@@ -42,7 +42,7 @@
           </div>
           <img class="hamburger-icon" src="../images/hamburger-icon.png">
         </nav>
-        <div class="location-heading-hero">
+        <div class="location-heading-hero" id="location-heading">
           <h4 class="location-hero-h4">EXPLORE</h4>
           <h1 class="location-hero-h1">Landscapes</h1>
         </div>
@@ -77,7 +77,7 @@
                   voluptas reprehenderit. Ut voluptas laudantium
                 </p>
               <div class="location-box-gps">
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3012.202380737561!2d29.084563975320044!3d40.97704907135498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cac64cd4a6eca5%3A0x3c1098978165bc6f!2zU2FocmF5xLEgQ2VkaXQsIEJheWFyIENkLiwgS2FkxLFrw7Z5L8Swc3RhbmJ1bA!5e0!3m2!1str!2str!4v1714046011853!5m2!1str!2str" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3012.202380737561!2d29.084563975320044!3d40.97704907135498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cac64cd4a6eca5%3A0x3c1098978165bc6f!2zU2FocmF5xLEgQ2VkaXQsIEJheWFyIENkLiwgS2FkxLFrw7Z5L8Swc3RhbmJ1bA!5e0!3m2!1str!2str!4v1714046011853!5m2!1str!2str" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
               <p class="location-box-p">
                   Sit quasi soluta non temporibus voluptas non necessitatibus tempore
