[PR - 20] - Adding Media Query for Secondary Nav Bar

--- a/packages.html
+++ b/packages.html
@@ -33,18 +33,18 @@
                     ></a>
                     <div class="hes-dropdown">
                         <ul>
-                        <li class="hes-dropdown-link">
-                            <a href="#">Honeymoon Packages</a>
-                        </li>
-                        <li class="hes-dropdown-link">
-                            <a href="#">Tours Packages</a>
-                        </li>
-                        <li class="hes-dropdown-link">
-                            <a href="#">Musical Events</a>
-                        </li>
-                        <li class="hes-dropdown-link">
-                            <a href="#">Build Package</a>
-                        </li>
+                            <li class="hes-dropdown-link">
+                                <a href="#">Honeymoon Packages</a>
+                            </li>
+                            <li class="hes-dropdown-link">
+                                <a href="#">Tours Packages</a>
+                            </li>
+                            <li class="hes-dropdown-link">
+                                <a href="#">Musical Events</a>
+                            </li>
+                            <li class="hes-dropdown-link">
+                                <a href="#">Build Package</a>
+                            </li>
                         </ul>
                     </div>
                     </li>
@@ -134,31 +134,31 @@
                     Ex optio sequi et quos praesentium in nostrum labore nam rerum
                     iusto aut magni nesciunt? Quo quidem neque iste expedita est dolo.
                     </p>
-                    <div>
+                    <div class="i-whole-input">
                         <img src="images/location/loca-input-user.png" alt="User Icon">
                         <input type="text" placeholder="Name">
                     </div>
-                    <div>
+                    <div class="i-whole-input">
                         <img src="images/location/loca-input-email.png" alt="Email Icon">
                         <input type="email" placeholder="Email">
                     </div>
-                    <div>
+                    <div class="i-whole-input">
                         <img src="images/location/loca-input-email2.png" alt="Email Icon">
                         <input type="email" placeholder="Confirm Email">
                     </div>
-                    <div>
+                    <div class="i-whole-input">
                         <img src="images/location/loca-input-phone.png" alt="Phone Icon">
                         <input type="text" placeholder="Phone">
                     </div>
-                    <div>
+                    <div class="i-whole-input">
                         <img src="images/location/location-input-date.png" alt="Date Icon">
                         <input type="text" placeholder="Date">
                     </div>
-                    <div>
+                    <div class="i-whole-input">
                         <img src="images/location/loca-input-tag.png" alt="Ticket Icon">
                         <input type="number" placeholder="Number of ticket">
                     </div>
-                    <div>
+                    <div class="i-whole-input">
                         <img src="images/location/loca-input-masage.png" alt="Message Icon">
                         <input type="text" placeholder="Message">
                     </div>
