[PR - 20] - Slight Changes

--- a/packages.html
+++ b/packages.html
@@ -170,6 +170,10 @@
             <img class="tg-plant" src="images/location/tour-location-img002.png" alt="Plant Image"/>
             <img class="tg-vacation" src="images/location/tour-location-img001.png" alt="Vacation Image"/>
         </div>
+
+        <!-- <img class="tg-plant" src="images/location/tour-location-img002.png" alt="Plant Image"/>
+        <img class="tg-vacation" src="images/location/tour-location-img001.png" alt="Vacation Image"/> -->
+
     </div>
 </body>
 </html>
