--- a/Packages.html
+++ b/Packages.html
@@ -30,22 +30,34 @@
             <div class="Packages-nav-links">
               <a href="#information" class="nav_information">
                 <div class="Packages-icon">
-                  <img src="images/location/location-info-logo.png"> Information
+                  <img src="images/location/location-info-logo.png">
+                </div>
+                  <div> 
+                  <p>Information</p>
                 </div>
               </a>
               <a href="#tourplan" class="nav_tourplan">
                 <div class="Packages-icon">
-                <img src="images/location/locations_calender-logo.png"> Tour Plan
+                <img src="images/location/locations_calender-logo.png"> 
+                </div>
+                <div>
+                <p>Tour Plan</p>
                 </div>
               </a>
               <a href="#location" class="nav_location">
                 <div class="Packages-icon">
-                  <img src="images/location/icons_location.png"> Location
+                  <img src="images/location/icons_location.png">
+                </div>
+                <div>
+                  <p>Location</p>
                 </div>
               </a>
               <a href="#gallery" class="nav_gallery">
                 <div class="Packages-icon">
-                  <img src="images/location/location-gallery-logo.png"> Gallery
+                  <img src="images/location/location-gallery-logo.png">
+                </div>
+                <div>
+                  <p>Gallery</p>
                 </div>
               </a>
             </div>
@@ -144,7 +156,7 @@
                 </div>
                 <div>
                   <img src="images/location/loca-input-calendar.png" alt="">
-                  <input type="text" placeholder="dd-mm-yy"/>
+                  <input type="date" placeholder="dd-mm-yy"/>
                 </div>
                 <div>
                   <img src="images/location/loca-input-tag.png" alt="">
@@ -152,15 +164,15 @@
                 </div>
                 <div>
                   <img src="images/location/loca-input-masage.png" alt="">
-                  <input type="text" placeholder="Message"/>
+                  <textarea id="message" placeholder="Message" rows="4" cols="50"></textarea>
                 </div>
                 <button>Check Availability</button>
                 <button>Book Now</button>
               </div>
-              <div class="BTT-img">
-                <img src="images/location/tour-location-img001.png">
-              </div>
             </div>
+        </div>
+        <div class="BTT-img">
+          <img src="images/location/tour-location-img001.png">
         </div>
     </div>
   </body>
