--- a/about.html
+++ b/about.html
@@ -257,6 +257,76 @@
       </div>
     </div>
     <!-- Esra Explore Packages Section END-->
+    <!-- Muruvvet Testimonials Start-->
+    <div class="homepage-testimonials">
+      <div class="testimonials-container">
+        <div class="tc-testimonial-section">
+          <div class="ts-title-box">
+            <div class="tb-subheading">
+              <h4>PROMOTION</h4>
+            </div>
+            <div class="tb-heading">
+              <h4>See What Our Clients Say About Us</h4>
+            </div>
+          </div>
+          <div class="ts-script-box">
+            <img
+              class="sb-designer-image"
+              src="images/testimonial-section-box-pp-img.png"
+              alt="Designer Photo"
+            />
+
+            <div class="sb-writing-box">
+              <p class="wb-paragraph">
+                Vel officiis dolor ea illo aut eligendi ullam non laudantium
+                magnam et recusandae molestiae sit iure unde aut voluptate
+                quaerat. Id sunt provident quo possimus impedit vel doloremque
+                obcaecati qui ullam consectetur et ipsum omnis.
+              </p>
+              <p class="wb-footer">Christine Beckam - Designer</p>
+              <img
+                class="wb-double-quotes"
+                src="images/testimonial-box-quotes.png"
+                alt="Double Quotes"
+              />
+              <img
+                class="wb-small-quotes"
+                src="images/Vector-double-quotes.png"
+                alt="Double Quotes"
+              />
+            </div>
+
+            <div class="sb-left-arrow">
+              <img src="images/arrow-leeft-icon.png" al0t="Left Arrow" />
+            </div>
+
+            <div class="sb-right-arrow">
+              <img src="images/arrow-right-icon.png" alt="Right Arrow" />
+            </div>
+          </div>
+        </div>
+
+        <div class="tc-pagination">
+          <img src="images/Pagination.png" alt="Pagination" />
+        </div>
+      </div>
+      <img
+        class="tc-hat-image"
+        src="images/testimonial-section-hat-img.png"
+        alt="Hat Image"
+      />
+      <img
+        class="tc-seashell-image"
+        src="images/testimonial-section-seashell-img.png"
+        alt="Seashell Image"
+      />
+      <img
+        class="tc-place-image"
+        src="images/testimonial-section-photo-img.png"
+        alt="Place Image"
+      />
+    </div>
+    <!-- Muruvvet Testimonials End-->
     <script src="js/index.js"></script>
   </body>
 </html>
