--- a/packages.html
+++ b/packages.html
@@ -11,89 +11,9 @@
 </head>
 <body>
     <div class="package-detail-page-tour-gallery">
-        <header class="hero-section">
-            <div class="hes-hero">
-                <input type="checkbox" name="" id="hes-check"/>
-                <div class="hes-header-logo">
-                <img src="images/logo.png" alt=""/>
-            </div>
 
-            <div class="hes-nav">
-                <div class="hes-links">
-                <ul>
-                    <li class="hes-link" style="--i: 0.6s">
-                    <a href="index.html">Home</a>
-                    </li>
-                    <li class="hes-link" style="--i: 0.85s">
-                    <a href="about.html">About</a>
-                    </li>
-                    <li class="hes-link" style="--i: 1.1s">
-                    <a href="#"
-                        >Services <i class="fa-solid fa-caret-down"></i
-                    ></a>
-                    <div class="hes-dropdown">
-                        <ul>
-                            <li class="hes-dropdown-link">
-                                <a href="#">Honeymoon Packages</a>
-                            </li>
-                            <li class="hes-dropdown-link">
-                                <a href="#">Tours Packages</a>
-                            </li>
-                            <li class="hes-dropdown-link">
-                                <a href="#">Musical Events</a>
-                            </li>
-                            <li class="hes-dropdown-link">
-                                <a href="#">Build Package</a>
-                            </li>
-                        </ul>
-                    </div>
-                    </li>
-                    <li class="hes-link" style="--i: 1.35s">
-                    <a href="#">Upcoming Packages</a>
-                    </li>
-                </ul>
-                </div>
-
-                <div class="hes-action-btn" style="--i: 1.8s">
-                <a href="#" class="hes-btn">Get in Touch</a>
-                </div>
-            </div>
-
-            <div class="hes-hamburger-menu-container">
-                <div class="hes-hamburger-menu">
-                <div></div>
-                </div>
-            </div>
-            </div>
-
-            <div class="hes-script">
-                <h2 class="s-subheading">EXPLORE</h2>
-                <h2 class="s-heading">Landscapes</h2>
-            </div>
-        </header>
-
-        <div class="tour-gallery-container">
-            <div class="tg-secondary-nav-bar">
-                <a class="nav information" href="#" target="_blank">
-                    <img src="images/location/location-info-logo.png" alt="Information Logo"/>
-                    <p>Information</p>
-                </a>
-                <a class="nav tour-plan" href="#" target="_blank">
-                    <img src="images/location/locations_calender-logo.png" alt="Tour Plan Logo"/>
-                    <p>Tour Plan</p>
-                </a>
-                <a class="nav location" href="#" target="_blank">
-                    <img src="images/location/icons_location.png" alt="Location Logo" />
-                    <p>Location</p>
-                </a>
-                <a class="nav gallery" href="#" target="_blank">
-                    <img src="images/location/location-gallery-logo.png" alt="Gallery Logo"/>
-                    <p>Gallery</p>
-                </a>
-            </div>
-
-            <div class="tg-image-and-information">
-                <div class="ii-image-gallery">
+            <div class="tg-image">
+                <div class="i-image-gallery">
                     <div class="ig-images">
                         <div class="i-normal">
                             <img src="images/packages/tour-gallery-normal1.png" alt="Image 1"/>
@@ -127,49 +47,7 @@
                         <img src="images/packages/tour-gallery-footer-right-arrow.png" alt="Right Arrow">
                     </div>
                 </div>
-                
-                <form class="ii-information">
-                    <h1 class="i-title">Book This Tour</h1>
-                    <p class="i-script">
-                    Ex optio sequi et quos praesentium in nostrum labore nam rerum
-                    iusto aut magni nesciunt? Quo quidem neque iste expedita est dolo.
-                    </p>
-                    <div class="i-whole-input">
-                        <img src="images/location/loca-input-user.png" alt="User Icon">
-                        <input type="text" placeholder="Name">
-                    </div>
-                    <div class="i-whole-input">
-                        <img src="images/location/loca-input-email.png" alt="Email Icon">
-                        <input type="email" placeholder="Email">
-                    </div>
-                    <div class="i-whole-input">
-                        <img src="images/location/loca-input-email2.png" alt="Email Icon">
-                        <input type="email" placeholder="Confirm Email">
-                    </div>
-                    <div class="i-whole-input">
-                        <img src="images/location/loca-input-phone.png" alt="Phone Icon">
-                        <input type="text" placeholder="Phone">
-                    </div>
-                    <div class="i-whole-input">
-                        <img src="images/location/location-input-date.png" alt="Date Icon">
-                        <input type="text" placeholder="Date">
-                    </div>
-                    <div class="i-whole-input">
-                        <img src="images/location/loca-input-tag.png" alt="Ticket Icon">
-                        <input type="number" placeholder="Number of ticket">
-                    </div>
-                    <div class="i-whole-input">
-                        <img src="images/location/loca-input-masage.png" alt="Message Icon">
-                        <input type="text" placeholder="Message">
-                    </div>
-                    <button class="button" type="submit" >Check Availability</button>
-                    <button class="button" type="submit" >Book Now</button>    
-                </form>
-            </div>
-                
-            <img class="tg-plant" src="images/location/tour-location-img002.png" alt="Plant Image"/>
-            <img class="tg-vacation" src="images/location/tour-location-img001.png" alt="Vacation Image"/>
-        </div>
     </div>
+</div>
 </body>
 </html>
