[PR-16] - Responsive structure updated.

--- a/about.html
+++ b/about.html
@@ -137,7 +137,7 @@
           />
         </div>
         <div class="ts-container">
-          <div class="ts-title-box">
+          <div class="ts-title-box-container">
             <h6 class="ts-subtitle">TREND</h6>
             <h2 class="ts-title">Our Popular Tour Plans</h2>
             <p class="ts-paragraph">
