--- a/packages.html
+++ b/packages.html
@@ -17,50 +17,80 @@
   </head>
 
   <body>
-    <header class="package-location-hero">
-      <div class="hero-box container">
-        <nav id="hero-navbar" class="hero-nav container">
-          <img src="../images/logo.png" alt="Travel Logo">
-          <div class="nav-links-box">
-            <ul class="hero-nav-links">
-              <li class="hero-nav-link"><a href="/">Home</a></li>
-              <li class="hero-nav-link"><a href="/about/about">About</a></li>
-              <li class="hero-nav-link">
-                <div class="nav-link-dropdown">
-                  <a id="services-link" href="#">Services</a>
-                  <div id="drop-down-links" class="hero-nav-dropdown">
-                    <a href="#">Honeymoon Packages</a><br>
-                    <a href="#">Tours Packages</a><br>
-                    <a href="#">Musical Events</a><br>
-                    <a href="#">Build Package</a><br>
-                  </div>
-                </div>
-              </li>
-              <li class="hero-nav-link"><a href="#">Upcomming Packages</a></li>
-            </ul>
-            <a onclick="increment()" id="contact-owerlay" class="contact-link" href="#">Get in Touch</a>
+    <div class="homepage-hero-section">
+      <header class="hero-section">
+        <div class="hes-hero">
+          <input type="checkbox" name="" id="hes-check" />
+          <div class="hes-header-logo">
+            <img src="images/logo.png" alt="" />
           </div>
-          <img class="hamburger-icon" src="../images/hamburger-icon.png">
-        </nav>
-        <div class="location-heading-hero" id="location-heading">
-          <h4 class="location-hero-h4">EXPLORE</h4>
-          <h1 class="location-hero-h1">Landscapes</h1>
+
+          <div class="hes-nav">
+            <div class="hes-links">
+              <ul>
+                <li class="hes-link" style="--i: 0.6s">
+                  <a href="index.html">Home</a>
+                </li>
+                <li class="hes-link" style="--i: 0.85s">
+                  <a href="about.html">About</a>
+                </li>
+                <li class="hes-link" style="--i: 1.1s">
+                  <a href="#"
+                    >Services <i class="fa-solid fa-caret-down"></i
+                  ></a>
+                  <div class="hes-dropdown">
+                    <ul>
+                      <li class="hes-dropdown-link">
+                        <a href="#">Honeymoon Packages</a>
+                      </li>
+                      <li class="hes-dropdown-link">
+                        <a href="#">Tours Packages</a>
+                      </li>
+                      <li class="hes-dropdown-link">
+                        <a href="#">Musical Events</a>
+                      </li>
+                      <li class="hes-dropdown-link">
+                        <a href="#">Build Package</a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="hes-link" style="--i: 1.35s">
+                  <a href="#">Upcomming Packages</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="hes-action-btn" style="--i: 1.8s">
+              <a href="#" class="hes-btn">Get in Touch</a>
+            </div>
+          </div>
+
+          <div class="hes-hamburger-menu-container">
+            <div class="hes-hamburger-menu">
+              <div></div>
+            </div>
+          </div>
         </div>
-      </div>
-    </header>
+      </header>
+      <div class="location-heading-hero" id="location-heading">
+            <h4 class="location-hero-h4">EXPLORE</h4>
+            <h1 class="location-hero-h1">Landscapes</h1>
+          </div>
+    </div>
     <div class="package-location">
       <div class="package-location-navbar container">
         <div id="package-location-navbar-box0" class="package-location-navbar-box" style="background-color: rgb(248, 248, 248);">
           <img src="../images/location/location-info-logo.png" alt="">
-          <a href="#">Information</a>
+          <p>Information</p>
         </div>
         <div id="package-location-navbar-box1" class="package-location-navbar-box" style="background-color: rgb(248, 248, 248);">
           <img src="../images/location/locations_calender-logo.png" alt="">
-          <a href="#">Tour Plan</a>
+          <p>Tour Plan</p>
         </div>
         <div id="package-location-navbar-box2" class="package-location-navbar-box" style="background-color: rgb(255, 255, 255);">
           <img src="../images/location/icons_location.png" alt="">
-          <a href="#">Location</a>
+          <p>Location</p>
         </div>
         <div id="package-location-navbar-box3" class="package-location-navbar-box" style="background-color: rgb(248, 248, 248);">
           <img src="../images/location/location-gallery-logo.png" alt=""><a href="#">Gallery</a>
