Update Html & Css Packages

--- a/Packages.html
+++ b/Packages.html
@@ -91,29 +91,45 @@
                 </div>
                 <div class="Country-Features">
                   <div class="Type-Of-Service">
-                    <h5>Destination</h5>
-                    <h5>Departure</h5>
-                    <h5>Departure Time</h5>
-                    <h5>Return Time</h5>
-                    <h5>Dress Code</h5>
-                    <h5>Not Included</h5>
-                    <h5>Included</h5>
-                  </div>
-                  <div class="Service-Descripton">
-                    <p>: Zurich, Switzerland</p>
-                    <p>: Main Sqaure, New City</p>
-                    <p>: Approximately 08:10 AM</p>
-                    <p>: Approximately 07:20 PM</p>
-                    <p>: Casul, comfortable and light</p>
-                    <div class="Not-Included">
-                      <p> <img src="images/location/Packages-block.png"> Gallery Ticket</p>
-                      <p> <img src="images/location/Packages-block.png"> Lunch</p>
+                    <div>
+                      <h5>Destination</h5>
+                      <p>: Zurich, Switzerland</p>
                     </div>
-                    <div class="Included-positive">
-                      <p> <img src="images/location/Packages-approval.png"> Star Accomodations</p>
-                      <p> <img src="images/location/Packages-approval.png"> Airport Transfer</p>
-                      <p> <img src="images/location/Packages-approval.png"> Breakfast</p>
-                      <p> <img src="images/location/Packages-approval.png"> Personal Guide</p>
+                    <div>
+                      <h5>Departure</h5>
+                      <p>: Main Sqaure, New City</p>
+                    </div>
+                    <div>
+                      <h5>Departure Time</h5>
+                      <p>: Approximately 08:10 AM</p>
+                    </div>
+                    <div>
+                      <h5>Return Time</h5>
+                      <p>: Approximately 07:20 PM</p>
+                    </div>
+                    <div>
+                      <h5>Dress Code</h5>
+                      <p>: Casul, comfortable and light</p>
+                    </div>
+                    <div>
+                      <h5>Not Included</h5>
+                      <div class="Not-Included">
+                        <p> <img src="images/location/Packages-block.png"> Gallery Ticket</p>
+                        <p> <img src="images/location/Packages-block.png"> Lunch</p>
+                      </div>
+                    </div>
+                    <div>
+                      <h5>Included</h5>
+                      <div class="Included-positive">
+                        <div>
+                          <p> <img src="images/location/Packages-approval.png"> Star Accomodations</p>
+                          <p> <img src="images/location/Packages-approval.png"> Airport Transfer</p>
+                        </div>
+                        <div>
+                          <p> <img src="images/location/Packages-approval.png"> Breakfast</p>
+                          <p> <img src="images/location/Packages-approval.png"> Personal Guide</p>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
