[PR-17] - packages information component

--- a/Packages.html
+++ b/Packages.html
@@ -20,214 +20,115 @@
     />
   </head>
   <body>
-    <div class="Packages-Img-Container">
-      <div class="Packages-img">
-        <div class="Packages-img-text">
-          <h4 class="explore">EXPLORE</h4>
-          <h1 class="landscape">Landscapes</h1>
+    <div class="Packages-Information-About">
+      <div class="About-Country">
+        <h3 class="Country-Tittle-Design">Switzerland</h3>
+        <div class="Country-fee">
+          <p class="price">1,000$</p>
+          <h1 class="slash">/</h1>
+          <p class="faded">Per Couple</p>
         </div>
       </div>
-    </div>
-    <div class="Packages-Body-Container">
-      <div class="Packages-navbar">
-        <div class="Packages-nav-links">
-          <a href="#information" class="nav_information">
-            <div class="Packages-icon">
-              <img src="images/location/location-info-logo.png" />
-            </div>
-            <div>
-              <p>Information</p>
-            </div>
-          </a>
-          <a href="#tourplan" class="nav_tourplan">
-            <div class="Packages-icon">
-              <img src="images/location/locations_calender-logo.png" />
-            </div>
-            <div>
-              <p>Tour Plan</p>
-            </div>
-          </a>
-          <a href="#location" class="nav_location">
-            <div class="Packages-icon">
-              <img src="images/location/icons_location.png" />
-            </div>
-            <div>
-              <p>Location</p>
-            </div>
-          </a>
-          <a href="#gallery" class="nav_gallery">
-            <div class="Packages-icon">
-              <img src="images/location/location-gallery-logo.png" />
-            </div>
-            <div>
-              <p>Gallery</p>
-            </div>
-          </a>
+      <div class="country-star">
+        <div class="star">
+          <img src="images/hometour-packages-star-img.png" />
+          <img src="images/hometour-packages-star-img.png" />
+          <img src="images/hometour-packages-star-img.png" />
+          <img src="images/hometour-packages-star-img.png" />
+          <img src="images/hometour-packages-star-img.png" />
         </div>
+        <p class="review-design">(2.3k review)</p>
       </div>
-      <div class="Packages-Information">
-        <div class="Packages-Information-About">
-          <div class="About-Country">
-            <h3 class="Country-Tittle-Design">Switzerland</h3>
-            <div class="Country-fee">
-              <p class="price">1,000$</p>
-              <h1 class="slash">/</h1>
-              <p class="faded">Per Couple</p>
+      <div class="Country-explanation">
+        <p>
+          Ex optio sequi et quos praesentium in nostrum labore nam rerum iusto
+          aut magni nesciunt? Quo quidem neque iste expedita est dolor similique
+          ut quasi maxime ut deserunt autem At praesentium voluptatem aut libero
+          nisi. Et eligendi sint ab cumque veritatis aut provident aliquam. Aut
+          aspernatur consequuntur eum quaerat distinctio ut inventore aliquid et
+          quasi alias ut rerum suscipit et nihil deleniti. Ex optio sequi et
+          quos praesentium in nostrum labore nam rerum iusto aut magni nesciunt?
+          Quo quidem neque iste expedita est dolor similique ut quasi maxime ut
+          deserunt autem At praesentium voluptatem aut libero nisi. Et eligendi
+          sint ab cumque veritatis aut provident aliquam. Aut aspernatur
+          consequuntur eum quaerat distinctio ut inventore aliquid et quasi
+          alias ut rerum suscipit et nihil deleniti.
+        </p>
+      </div>
+      <div class="Country-Features">
+        <div class="Type-Of-Service">
+          <div>
+            <h5>Destination</h5>
+            <p>: Zurich, Switzerland</p>
+          </div>
+          <div>
+            <h5>Departure</h5>
+            <p>: Main Sqaure, New City</p>
+          </div>
+          <div>
+            <h5>Departure Time</h5>
+            <p>: Approximately 08:10 AM</p>
+          </div>
+          <div>
+            <h5>Return Time</h5>
+            <p>: Approximately 07:20 PM</p>
+          </div>
+          <div>
+            <h5>Dress Code</h5>
+            <p>: Casul, comfortable and light</p>
+          </div>
+          <div>
+            <h5>Not Included</h5>
+            <div class="Not-Included">
+              <p>
+                <img src="images/location/Packages-block.png" /> Gallery Ticket
+              </p>
+              <p><img src="images/location/Packages-block.png" /> Lunch</p>
             </div>
           </div>
-          <div class="country-star">
-            <div class="star">
-              <img src="images/hometour-packages-star-img.png" />
-              <img src="images/hometour-packages-star-img.png" />
-              <img src="images/hometour-packages-star-img.png" />
-              <img src="images/hometour-packages-star-img.png" />
-              <img src="images/hometour-packages-star-img.png" />
-            </div>
-            <p class="review-design">(2.3k review)</p>
-          </div>
-          <div class="Country-explanation">
-            <p>
-              Ex optio sequi et quos praesentium in nostrum labore nam rerum
-              iusto aut magni nesciunt? Quo quidem neque iste expedita est dolor
-              similique ut quasi maxime ut deserunt autem At praesentium
-              voluptatem aut libero nisi. Et eligendi sint ab cumque veritatis
-              aut provident aliquam. Aut aspernatur consequuntur eum quaerat
-              distinctio ut inventore aliquid et quasi alias ut rerum suscipit
-              et nihil deleniti. Ex optio sequi et quos praesentium in nostrum
-              labore nam rerum iusto aut magni nesciunt? Quo quidem neque iste
-              expedita est dolor similique ut quasi maxime ut deserunt autem At
-              praesentium voluptatem aut libero nisi. Et eligendi sint ab cumque
-              veritatis aut provident aliquam. Aut aspernatur consequuntur eum
-              quaerat distinctio ut inventore aliquid et quasi alias ut rerum
-              suscipit et nihil deleniti.
-            </p>
-          </div>
-          <div class="Country-Features">
-            <div class="Type-Of-Service">
+          <div>
+            <h5>Included</h5>
+            <div class="Included-positive">
               <div>
-                <h5>Destination</h5>
-                <p>: Zurich, Switzerland</p>
+                <p>
+                  <img src="images/location/Packages-approval.png" /> Star
+                  Accomodations
+                </p>
+                <p>
+                  <img src="images/location/Packages-approval.png" />
+                  Airport Transfer
+                </p>
               </div>
               <div>
-                <h5>Departure</h5>
-                <p>: Main Sqaure, New City</p>
-              </div>
-              <div>
-                <h5>Departure Time</h5>
-                <p>: Approximately 08:10 AM</p>
-              </div>
-              <div>
-                <h5>Return Time</h5>
-                <p>: Approximately 07:20 PM</p>
-              </div>
-              <div>
-                <h5>Dress Code</h5>
-                <p>: Casul, comfortable and light</p>
-              </div>
-              <div>
-                <h5>Not Included</h5>
-                <div class="Not-Included">
-                  <p>
-                    <img src="images/location/Packages-block.png" /> Gallery
-                    Ticket
-                  </p>
-                  <p><img src="images/location/Packages-block.png" /> Lunch</p>
-                </div>
-              </div>
-              <div>
-                <h5>Included</h5>
-                <div class="Included-positive">
-                  <div>
-                    <p>
-                      <img src="images/location/Packages-approval.png" /> Star
-                      Accomodations
-                    </p>
-                    <p>
-                      <img src="images/location/Packages-approval.png" />
-                      Airport Transfer
-                    </p>
-                  </div>
-                  <div>
-                    <p>
-                      <img src="images/location/Packages-approval.png" />
-                      Breakfast
-                    </p>
-                    <p>
-                      <img src="images/location/Packages-approval.png" />
-                      Personal Guide
-                    </p>
-                  </div>
-                </div>
+                <p>
+                  <img src="images/location/Packages-approval.png" />
+                  Breakfast
+                </p>
+                <p>
+                  <img src="images/location/Packages-approval.png" />
+                  Personal Guide
+                </p>
               </div>
             </div>
-          </div>
-          <div class="From-Our-Gallery">
-            <h2 class="Gallery-tittle-style">From our gallery</h2>
-            <p class="Gallery-paragraph">
-              Ex optio sequi et quos praesentium in nostrum labore nam rerum
-              iusto aut magni nesciunt? Quo quidem neque iste expedita est dolor
-              similique ut quasi maxime ut deserunt autem At praesentium
-              voluptatem aut libero nisi.
-            </p>
-            <div class="Gallery-img">
-              <img src="images/location/Packages-img-1.png" />
-              <img src="images/location/Packages-img-2.png" />
-              <img src="images/location/Packages-img-3.png" />
-              <img src="images/location/Packages-img-4.png" />
-              <img src="images/location/Packages-img-5.png" />
-              <img src="images/location/Packages-img-6.png" />
-            </div>
-          </div>
-        </div>
-        <div class="Book-This-Tour">
-          <div class="Book-tittle">
-            <h2>Book This Tour</h2>
-            <p class="book-paragraph">
-              Ex optio sequi et quos praesentium in nostrum labore nam rerum
-              iusto aut magni nesciunt? Quo quidem neque iste expedita est dolo.
-            </p>
-          </div>
-          <div class="Packages-Input">
-            <div>
-              <img src="images/location/loca-input-user.png" alt="" />
-              <input type="text" placeholder="Name" />
-            </div>
-            <div>
-              <img src="images/location/loca-input-email.png" alt="" />
-              <input type="text" placeholder="Email" />
-            </div>
-            <div>
-              <img src="images/location/loca-input-email2.png" alt="" />
-              <input type="text" placeholder="Confirm Email" />
-            </div>
-            <div>
-              <img src="images/location/loca-input-phone.png" alt="" />
-              <input type="text" placeholder="Phone" />
-            </div>
-            <div>
-              <img src="images/location/loca-input-calendar.png" alt="" />
-              <input type="date" placeholder="dd-mm-yy" />
-            </div>
-            <div>
-              <img src="images/location/loca-input-tag.png" alt="" />
-              <input type="text" placeholder="Number of ticket" />
-            </div>
-            <div>
-              <img src="images/location/loca-input-masage.png" alt="" />
-              <textarea
-                id="message"
-                placeholder="Message"
-                rows="4"
-                cols="50"
-              ></textarea>
-            </div>
-            <button>Check Availability</button>
-            <button>Book Now</button>
           </div>
         </div>
       </div>
-      <div class="BTT-img">
-        <img src="images/location/tour-location-img001.png" />
+      <div class="From-Our-Gallery">
+        <h2 class="Gallery-tittle-style">From our gallery</h2>
+        <p class="Gallery-paragraph">
+          Ex optio sequi et quos praesentium in nostrum labore nam rerum iusto
+          aut magni nesciunt? Quo quidem neque iste expedita est dolor similique
+          ut quasi maxime ut deserunt autem At praesentium voluptatem aut libero
+          nisi.
+        </p>
+        <div class="Gallery-img">
+          <img src="images/location/Packages-img-1.png" />
+          <img src="images/location/Packages-img-2.png" />
+          <img src="images/location/Packages-img-3.png" />
+          <img src="images/location/Packages-img-4.png" />
+          <img src="images/location/Packages-img-5.png" />
+          <img src="images/location/Packages-img-6.png" />
+        </div>
       </div>
     </div>
   </body>
