Footer added in project

--- a/packages.html
+++ b/packages.html
@@ -537,64 +537,84 @@
         />
       </div>
     </div>
-    <div class="homepage-footer-body">
-      <div class="footer-group">
-        <div class="footer-group-171">
-          <img
-            class="tarvel-logo"
-            src="../images/homepage-footer/logo (1).png"
-          />
-          <p class="travel-text">
-            Travel helps companies manage payments easily.
-          </p>
-          <img
-            class="travel-group-logo"
-            src="../images/homepage-footer/Group 169 (1).png"
-          />
+    <footer class="homepage-footer">
+      <div class="footer-container">
+        <div class="footer-image">
+          <img src="images/Footer_img.webp" alt="" />
         </div>
-        <div class="nav-list-item">
-          <div class="company-group">
-            <h5 class="company-h5">Company</h5>
-            <a href="#" class="About-text">About Us</a>
-            <a href="#" class="careers-text">Carees</a>
-            <a href="#" class="blog-text">Blog</a>
-            <a href="#" class="pricing-text">Pricing</a>
+        <div class="footer-main-box">
+          <div class="footer-main-content">
+            <div class="logo-img"><img src="images/logo-footer.png" /></div>
+            <p class="footer-text">
+              Travel helps companies <br />
+              manage payments easily
+            </p>
+            <div class="footer-logo">
+              <embed
+                src="images/in.svg"
+                width="16"
+                height="16"
+                type="image/svg+xml"
+              />
+              <embed
+                src="images/messenger.svg"
+                width="16"
+                height="16"
+                type="image/svg+xml"
+              />
+              <embed
+                src="images/twitter.svg"
+                width="16"
+                height="16"
+                type="image/svg+xml"
+              />
+              <embed
+                src="images/twoo.svg"
+                width="16"
+                height="16"
+                type="image/svg+xml"
+              />
+            </div>
+          </div>
+          <div class="footer-content">
+            <ul class="footer-list">
+              <h2>Company</h2>
+              <a class="footer-list-item" href="#">About Us</a>
+              <a class="footer-list-item" href="#">Careers</a>
+              <a class="footer-list-item" href="#">Blog</a>
+              <a class="footer-list-item" href="#">Pricing</a>
+            </ul>
+          </div>
+          <div class="footer-content">
+            <ul class="footer-list">
+              <h2>Destinations</h2>
+              <a class="footer-list-item" href="#">Maldives</a>
+              <a class="footer-list-item" href="#">Los Angelas</a>
+              <a class="footer-list-item" href="#">Las Vegas</a>
+              <a class="footer-list-item" href="#">Torronto</a>
+            </ul>
+          </div>
+          <div class="footer-content mail-content">
+            <h2>Join Our Newsletter</h2>
+            <div class="mail-container">
+              <input
+                type="email"
+                placeholder="Your email address"
+                class="footer-email-input"
+              />
+              <button class="subscribe-btn">Subscribe</button>
+            </div>
+            <p class="footer-text-sub-information">
+              * Will send you weekly updates for your better tour packages
+            </p>
           </div>
         </div>
-        <div class="destinations-nav-list">
-          <div class="destination-group">
-            <h5 class="destinations-h5">Destinations</h5>
-            <a href="#" class="Maldives-text">Maldives</a>
-            <a href="#" class="Losangelas-text">Los Angelas</a>
-            <a href="#" class="Lasvegas-text">Las Vegas</a>
-            <a href="#" class="Torronto-text">Torronto</a>
-          </div>
-        </div>
-        <div class="right-list-item">
-          <h5 class="Newsletter-h5">Join Our Newsletter</h5>
-          <div class="email-button">
-            <input
-              class="email-address"
-              type="text"
-              placeholder="Your email address"
-            />
-            <button class="subscribe">Subscribe</button>
-          </div>
-          <p class="right-list-text">
-            * Will send you weekly updates for your better<br />
-            tour packages.
-          </p>
-        </div>
-      </div>
-      <img
-        class="footer-background"
-        src="../images/homepage-footer/Footer img (2).png"
-      />
-      <div class="footer-page-line">
         <hr />
+        <div class="sub-text">
+          <p>Copyright @ Xpro 2022.All Rights Reserved</p>
+        </div>
       </div>
-      <p class="copyright">Copyright @ Xpro 2022. All Rights Reserved.</p>
-    </div>
+    </footer>
     <script src="js/index.js"></script>
   </body>
 </html>
