--- a/about.html
+++ b/about.html
@@ -373,6 +373,84 @@
       />
     </div>
     <!-- Muruvvet Testimonials End-->
+    <footer class="homepage-footer">
+      <div class="footer-container">
+        <div class="footer-image">
+          <img src="images/Footer_img.webp" alt="" />
+        </div>
+        <div class="footer-main-box">
+          <div class="footer-main-content">
+            <div class="logo-img"><img src="images/logo-footer.png" /></div>
+            <p class="footer-text">
+              Travel helps companies <br />
+              manage payments easily
+            </p>
+            <div class="footer-logo">
+              <embed
+                src="images/in.svg"
+                width="16"
+                height="16"
+                type="image/svg+xml"
+              />
+              <embed
+                src="images/messenger.svg"
+                width="16"
+                height="16"
+                type="image/svg+xml"
+              />
+              <embed
+                src="images/twitter.svg"
+                width="16"
+                height="16"
+                type="image/svg+xml"
+              />
+              <embed
+                src="images/twoo.svg"
+                width="16"
+                height="16"
+                type="image/svg+xml"
+              />
+            </div>
+          </div>
+          <div class="footer-content">
+            <ul class="footer-list">
+              <h2>Company</h2>
+              <a class="footer-list-item" href="#">About Us</a>
+              <a class="footer-list-item" href="#">Careers</a>
+              <a class="footer-list-item" href="#">Blog</a>
+              <a class="footer-list-item" href="#">Pricing</a>
+            </ul>
+          </div>
+          <div class="footer-content">
+            <ul class="footer-list">
+              <h2>Destinations</h2>
+              <a class="footer-list-item" href="#">Maldives</a>
+              <a class="footer-list-item" href="#">Los Angelas</a>
+              <a class="footer-list-item" href="#">Las Vegas</a>
+              <a class="footer-list-item" href="#">Torronto</a>
+            </ul>
+          </div>
+          <div class="footer-content mail-content">
+            <h2>Join Our Newsletter</h2>
+            <div class="mail-container">
+              <input
+                type="email"
+                placeholder="Your email address"
+                class="footer-email-input"
+              />
+              <button class="subscribe-btn">Subscribe</button>
+            </div>
+            <p class="footer-text-sub-information">
+              * Will send you weekly updates for your better tour packages
+            </p>
+          </div>
+        </div>
+        <hr />
+        <div class="sub-text">
+          <p>Copyright @ Xpro 2022.All Rights Reserved</p>
+        </div>
+      </div>
+    </footer>
     <script src="js/index.js"></script>
   </body>
 </html>
